Implement proper synchronous blocking calls when importing files